--- a/static/css/index.css
+++ b/static/css/index.css
@@ -162,7 +162,7 @@ body {
 }
 
 .results-carousel {
-  width: 100%;
+  width: auto;
   margin: 0 auto;
 }
 
@@ -185,7 +185,7 @@ body {
   /* left: -10%; */
   perspective: 1500px; /* 添加透视效果 */
   position: relative;
-  height: 700px;
+  /* height: 700px; */
 }
 
 /* Style each carousel item */
@@ -203,7 +203,7 @@ body {
 }
 
 .sub-results-carousel .item video {
-  height: 700px; 
+  /* height: 700px;  */
   width: auto; 
   object-fit: contain; 
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -242,7 +242,7 @@ body {
   /* left: -25%; */
   perspective: 1500px; /* 添加透视效果 */
   position: relative;
-  height: 700px;
+  /* height: 700px; */
 }
 
 /* Style each carousel item */
@@ -260,7 +260,7 @@ body {
 }
 
 .sub-results-carousel1 .item video {
-  height: 700px; 
+  /* height: 700px;  */
   width: auto; 
   object-fit: contain; 
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -313,7 +313,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: auto;
     margin: 0 auto;
     position: relative;
 }
