--- a/static/css/index.css
+++ b/static/css/index.css
@@ -209,6 +209,29 @@ body {
   border: 1px solid #bbb;
   border-radius: 10px; */
 }
+
+/* Style each carousel item */
+.sub-results-carousel .item_b {
+    margin: 5px;
+    overflow: hidden;
+    border: 1px solid #bbb;
+    border-radius: 10px;
+    padding: 0;
+    font-size: 0;
+    display: flex;
+    justify-content: center; /* Horizontally center the content inside each item */
+    align-items: center; /* Vertically center the content inside each item */
+    background-color: #000;
+}
+
+.sub-results-carousel .item_b video {
+  height: 300px; 
+  width: auto; 
+  /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  border: 1px solid #bbb;
+  border-radius: 10px; */
+}
+
 /* 对非中心项目应用立体效果、折叠和缩小 */
 .sub-results-carousel .slick-slide:not(.slick-center) {
     width: 50%; /* 让非中心幻灯片占用一半的宽度 */
